# clifin

./: .gitignore  README.md  alembic.ini  clifin_eda.ipynb  main.py  project.ps1  pyproject.toml  seed_db.py
migrations/: env.py
migrations/versions/: 2743c1ff4cdc_create_transactions_table.py
src/: __init__.py
src/clifin/: __init__.py  dashboard.py
src/clifin/db/: __init__.py  database.py
src/clifin/models/: __init__.py
src/clifin/repositories/: __init__.py  transaction_repository.py
src/db/: __init__.py  database.py
src/models/: __init__.py  transaction.py
src/repositories/: __init__.py  transaction_repository.py
